Bug 688000 - PDF writer produces misplaced characters
Summary: PDF writer produces misplaced characters
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: PDF Writer (show other bugs)
Version: 8.50
Hardware: PC Linux
: P2 normal
Assignee: Igor Melichev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-22 17:59 UTC by David Keeffe
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
EPS which produces bad PDF (684.14 KB, application/postscript)
2005-03-22 18:01 UTC, David Keeffe
Details
PDF from given EPS, from GS7.07 (30.45 KB, application/pdf)
2005-03-22 18:01 UTC, David Keeffe
Details
PDF from given EPS, from GS8.15 (30.93 KB, application/pdf)
2005-03-22 18:02 UTC, David Keeffe
Details
PDF from given EPS, from GS8.50 (30.60 KB, application/pdf)
2005-03-22 18:03 UTC, David Keeffe
Details
attachment-.ps (124.99 KB, application/postscript)
2005-04-27 01:49 UTC, Igor Melichev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Keeffe 2005-03-22 17:59:28 UTC
GS8.50 produces PDF output which views strangely with a number of viewers.
I have attached an EPS, produced by Acrobat 6 from an InDesign-produced PDF.

When distilled by gs7.07, the PDF (attached) has distorted character sizes, and
looks the same viewed by xpdf and gs.

When distilled by gs8.15, the PDF (attached) has even more distorted character
sizes.

When distilled by gs8.50 the PDF (attached) has yet worse placement and
character sizes. 

Viewing with xpdf and gs indicate the same symptoms.
Viewing the original EPS with GS produces good output.
Comment 1 David Keeffe 2005-03-22 18:01:01 UTC
Created attachment 1259 [details]
EPS which produces bad PDF

This EPS is what produced bad PDF as described in the bug filing.
It's output from Acrobat 6.
Comment 2 David Keeffe 2005-03-22 18:01:59 UTC
Created attachment 1260 [details]
PDF from given EPS, from GS7.07
Comment 3 David Keeffe 2005-03-22 18:02:34 UTC
Created attachment 1261 [details]
PDF from given EPS, from GS8.15
Comment 4 David Keeffe 2005-03-22 18:03:04 UTC
Created attachment 1262 [details]
PDF from given EPS, from GS8.50
Comment 5 David Keeffe 2005-03-22 18:05:22 UTC
I got hold of the orginal PDF from InDesign, and converted it to PS using Xpdf's
 pdftops (v3). That PS allowed GS to produce good PDF. 

However, I don't think that using pdftops is possible in the current workflow.
Comment 6 Jack Moffitt 2005-03-23 07:29:16 UTC
I can confirm the problem with CVS HEAD also.
Comment 7 Igor Melichev 2005-04-26 10:48:03 UTC
With the current HEAD the result is better, but it still has a problem with 
the character size and placement in the phone number.
Comment 8 Igor Melichev 2005-04-27 01:49:45 UTC
Created attachment 1346 [details]
attachment-.ps

A simplified test file to reproduce the problem with GS HEAD.